fix: wrong background-size of landscape thumbnail

--- a/Main/styles/index_page/_post-board.scss
+++ b/Main/styles/index_page/_post-board.scss
@@ -137,8 +137,6 @@
             &.landscape {
                 width: 100%;
                 aspect-ratio: 1 / 1;
-
-                background-size: auto;
             }
         }
 
